<resources>
    <string name="app_name">Champion Randomiser</string>

    <string name="title_activity_list_champions">Champions</string>

    <string name="action_force_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_values" translatable="false">
        <item>cs_CZ</item>
        <item>de_DE</item>
        <item>el_GR</item>
        <item>en_AU</item>
        <item>en_GB</item>
        <item>en_PH</item>
        <item>en_PL</item>
        <item>en_SG</item>
        <item>en_US</item>
        <item>es_AR</item>
        <item>es_ES</item>
        <item>es_MX</item>
        <item>fr_FR</item>
        <item>hu_HU</item>
        <item>id_ID</item>
        <item>it_IT</item>
        <item>ja_JP</item>
        <item>ko_KR</item>
        <item>ms_MY</item>
        <item>pl_PL</item>
        <item>pt_BR</item>
        <item>ro_RO</item>
        <item>ru_RU</item>
        <item>th_TH</item>
        <item>tr_TR</item>
        <item>vn_VN</item>
        <item>zh_CN</item>
        <item>zh_MY</item>
        <item>zh_TW</item>
    </string-array>

    <string-array name="pref_language_titles" translatable="false">
        <item>&#268;e&#353;tina (&#268;esk&#225; republika)</item>
        <item>Deutsch (Deutschland)</item>
        <item>&#917;&#955;&#955;&#951;&#957;&#953;&#954;&#940; (&#917;&#955;&#955;&#940;&#948;&#945;)</item>
        <item>English (Australia)</item>
        <item>English (United Kingdom)</item>
        <item>English (Philippines)</item>
        <item>English (Poland)</item>
        <item>English (Singapore)</item>
        <item>English (United States)</item>
        <item>Espa&#241;ol (Argentina)</item>
        <item>Espa&#241;ol (Espa&#241;a)</item>
        <item>Espa&#241;ol (M&#233;xico)</item>
        <item>Fran&#231;ais (France)</item>
        <item>Magyar (Magyarorsz&#225;g)</item>
        <item>Bahasa Indonesia (Indonesia)</item>
        <item>Italiano (Italia)</item>
        <item>&#26085;&#26412;&#35486; (&#26085;&#26412;)</item>
        <item>&#54620;&#44397;&#50612; (&#45824;&#54620;&#48124;&#44397;)</item>
        <item>Bahasa Melayu (Malaysia)</item>
        <item>Polski (Polska)</item>
        <item>Portugu&#234;s (Brasil)</item>
        <item>Rom&#226;n&#259; (Rom&#226;nia)</item>
        <item>&#1056;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081; (&#1056;&#1086;&#1089;&#1089;&#1080;&#1103;)</item>
        <item>&#3652;&#3607;&#3618; (&#3611;&#3619;&#3632;&#3648;&#3607;&#3624;&#3652;&#3607;&#3618;)</item>
        <item>T&#252;rk&#231;e (T&#252;rkiye)</item>
        <item>Ti&#7871;ng Vi&#7879;t (Vi&#7879;t Nam)</item>
        <item>&#20013;&#25991; (&#20013;&#22269;)</item>
        <item>&#20013;&#25991; (&#39532;&#26469;&#35199;&#20122;)</item>
        <item>&#20013;&#25991; (&#21488;&#28771;)</item>
    </string-array>

    <string name="pref_title_image_type">Image type</string>
    <string-array name="pref_image_type_titles" translatable="false">
        <item>Webp</item>
        <item>Png</item>
        <item>Jpeg</item>
    </string-array>

    <string-array name="pref_image_type_values" translatable="false">
        <item>WEBP</item>
        <item>PNG</item>
        <item>JPEG</item>
    </string-array>

    <string name="pref_title_image_quality">Image quality</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string name="pref_sync_frequency_default" translatable="false">720</string>
    <string-array name="pref_sync_frequency_titles">
        <item>12 hours</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>7 days</item>
        <item>14 days</item>
        <item>Never</item>
    </string-array>
    <!--Integers only-->
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>10080</item>
        <item>20160</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_language_default">en_US</string>

    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="progress_error">An unexpected error has occurred!</string>
    <string name="progress_idle">Checking For Updates</string>
    <string name="progress_downloads">Downloading %1$.2f%%</string>
    <string name="progress_verified">Verifying %1$.2f%%</string>
    <string name="action_refresh_images">Reload Images</string>
    <string name="checking_version">Checking for new version</string>
    <string name="parsing_data">Parsing data</string>

    <string name="champion_splash_content_description">Champion Splash Art</string>
    <string name="random_fab_content_description">Select a random champion</string>

    <string name="champion_name_transition_key" translatable="false">champion_name_key</string>
    <string name="champion_title_transition_key" translatable="false">champion_title_key</string>
    <string name="champion_splash_transition_key" translatable="false">champion_splash_key</string>
    <string name="champion_card_transition_key" translatable="false">champion_card_key</string>
    <string name="champion_blurb_key" translatable="false">champion_blurb_key</string>
    <string name="random_fab_transition_key" translatable="false">random_fab_key</string>
    <string name="pref_image_type_default" translatable="false">WEBP</string>
    <string name="pref_last_sync_key" translatable="false">DATE_KEY</string>
    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_image_quality_key" translatable="false">pref_image_quality</string>
    <string name="pref_sync_frequency_key" translatable="false">pref_sync_frequency</string>
    <string name="pref_image_type_key" translatable="false">pref_image_type</string>

</resources>
