<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/pref_language_default"
        android:dialogTitle="@string/pref_title_language"
        android:key="pref_language"
        android:title="@string/pref_title_language"
        android:entryValues="@array/pref_language_values"
        android:entries="@array/pref_language_titles"/>

    <ListPreference
        android:defaultValue="WEBP"
        android:dialogTitle="@string/pref_title_image_type"
        android:entries="@array/pref_image_type_titles"
        android:entryValues="@array/pref_image_type_values"
        android:key="pref_image_type"
        android:title="@string/pref_title_image_type" />

    <com.spiderbiggen.randomchampionselector.ui.views.SeekBarPreference
        android:defaultValue="85"
        android:dialogTitle="@string/pref_title_image_quality"
        android:key="pref_image_quality"
        android:text="%"
        android:title="@string/pref_title_image_quality"
        app:max="100"
        app:min="40" />

</PreferenceScreen>
